--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <header>
 
-        <img class="leftTopCircle" src="./IMG/LeftTopCircle.svg" alt="NotImg" />
-        <img class="leftTopCircle2" src="./IMG/Subtract (2).svg" alt="NotImg" />
+  <body>
+    <header class="header">
+      <img class="leftTopCircle" src="./IMG/LeftTopCircle.svg" alt="NotImg" />
+      <img class="leftTopCircle2" src="./IMG/Subtract (2).svg" alt="NotImg" />
 
       <div>
         <main class="main">
-
           <div class="main00">
-
             <div class="image-container">
               <img
                 class="overlay-image"
@@ -26,11 +24,9 @@
                 width="40px"
                 height="40px"
               />
-
             </div>
 
             <p class="main00logo">ANALYTICS</p>
-
           </div>
 
           <div class="main01">
@@ -62,31 +58,57 @@
         </section>
       </div>
     </header>
+    <svg
+      class="huita"
+      width="1600"
+      height="271"
+      viewBox="0 0 1600 271"
+      fill="none"
+    >
+      <path d="M0 0H1600V60L0 271V0Z" fill="#EF2A82" />
+    </svg>
 
-    <section>
-        <div class="container">
-            <div class="shape"></div>
+    <section class="content">
+      <div class="container01">
+        <h1 class="MainFeatures">Main Features</h1>
+        <p class="loremThem">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum
+          nisi aliquet volutpat pellentesque volutpat est. Sapien in etiam vitae
+          nibh nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar risus
+          pulvinar sit amet. Id vel in nam malesuada.
+        </p>
+
+        <div class="shape">
+          <div class="icons">
+            <img src="./IMG/Monitoring 24.svg" alt="" width="60px" height="60px"/>
+            <h2 class="shapeh2">Monitoring 24/7</h2>
+            <p class="shapeP">
+              Lorem ipsum dolor sit amet, consectetur adipis cing elit.
+              Elementum nisi aliquet volutpat.
+            </p>
           </div>
-    </section>
-
-    <section>
-      <div>
-        <div></div>
+          <div class="icons" >
+            <img src="./IMG/Widget System.svg" alt="" width="60px" height="60px"/>
+            <h2 class="shapeh2">Widget System</h2>
+            <p class="shapeP">
+              Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae
+              et, tortor pulvinar risus pulvinar.
+            </p>
+          </div>
+          <div class="icons">
+            <img  src="./IMG/Best Performance.svg" alt="" width="60px" height="60px"/>
+            <h2 class="shapeh2">Best Performance</h2>
+            <p class="shapeP">
+              Lorem ipsum dolor sit amet, consectetur adipis cing elit.
+              Elementum nisi aliquet volutpat.
+            </p>
+          </div>
+        </div>
       </div>
-    </section>
-
-    <section>
-      <div>
-        <div></div>
-
-        <div></div>
+      <div class="container02">
+        
       </div>
-    </section>
-
-    <section>
-      <div></div>
-      <div></div>
-      <div></div>
+      
     </section>
   </body>
   <script src="script.js"></script>
