--- a/index.html
+++ b/index.html
@@ -80,15 +80,25 @@
 
         <div class="shape">
           <div class="icons">
-            <img src="./IMG/Monitoring 24.svg" alt="" width="60px" height="60px"/>
+            <img
+              src="./IMG/Monitoring 24.svg"
+              alt=""
+              width="60px"
+              height="60px"
+            />
             <h2 class="shapeh2">Monitoring 24/7</h2>
             <p class="shapeP">
               Lorem ipsum dolor sit amet, consectetur adipis cing elit.
               Elementum nisi aliquet volutpat.
             </p>
           </div>
-          <div class="icons" >
-            <img src="./IMG/Widget System.svg" alt="" width="60px" height="60px"/>
+          <div class="icons">
+            <img
+              src="./IMG/Widget System.svg"
+              alt=""
+              width="60px"
+              height="60px"
+            />
             <h2 class="shapeh2">Widget System</h2>
             <p class="shapeP">
               Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae
@@ -96,7 +106,12 @@
             </p>
           </div>
           <div class="icons">
-            <img  src="./IMG/Best Performance.svg" alt="" width="60px" height="60px"/>
+            <img
+              src="./IMG/Best Performance.svg"
+              alt=""
+              width="60px"
+              height="60px"
+            />
             <h2 class="shapeh2">Best Performance</h2>
             <p class="shapeP">
               Lorem ipsum dolor sit amet, consectetur adipis cing elit.
@@ -106,10 +121,28 @@
         </div>
       </div>
       <div class="container02">
-        
+
+
+        <div class="card">
+
+          <div class="cardtext">
+            <h1 class="cardtexth1">Automated Reports & Widget Alerts</h1>
+            <p class="cardtextP">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum
+              nisi aliquet volutpat pellentesque volutpat est. Sapien in etiam
+              vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor
+              pulvinar risus pulvinar sit amet.
+            </p>
+          </div>
+          <img class="cardSvgImage" src="./IMG/screen-01.svg" alt="">
+        </div>
+
+
+        <div></div>
+        <div></div>
       </div>
-      
     </section>
   </body>
+  <script src="data.js"></script>
   <script src="script.js"></script>
 </html>
