--- a/index.html
+++ b/index.html
@@ -121,10 +121,7 @@
         </div>
       </div>
       <div class="container02">
-
-
-        <div class="card">
-
+        <!-- <div class="card">
           <div class="cardtext">
             <h1 class="cardtexth1">Automated Reports & Widget Alerts</h1>
             <p class="cardtextP">
@@ -134,12 +131,114 @@
               pulvinar risus pulvinar sit amet.
             </p>
           </div>
-          <img class="cardSvgImage" src="./IMG/screen-01.svg" alt="">
+          <img class="cardSvgImage" src="./IMG/screen-01.svg" alt="" />
+        </div> -->
+      </div>
+    </section>
+
+    <section class="pricingPlans">
+      <div class="pricingPlansName">Pricing Plans</div>
+
+      <div class="pricingPlansText">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi
+        aliquet volutpat pellentesque volutpat est.
+      </div>
+
+      <div class="pricingPlansCardAll">
+        <div class="pricingPlansCard">
+          <h1 class="pricingPlansCardName">Starter</h1>
+          <p class="pricingPlansCardText">up to 3 users</p>
+          <div class="splitter"></div>
+          <h1 class="pricingPlansCardPrice">$29</h1>
+          <p class="pricingPlansCardText2">per month</p>
+          <button class="pricingPlansCardButtom">Order</button>
         </div>
 
+        <div class="pricingPlansCard">
+          <h1 class="pricingPlansCardName">Standard</h1>
+          <p class="pricingPlansCardText">up to 20 users</p>
+          <div class="splitter"></div>
+          <h1 class="pricingPlansCardPrice">$99</h1>
+          <p class="pricingPlansCardText2">per month</p>
+          <button class="pricingPlansCardButtom">Order</button>
+        </div>
 
-        <div></div>
-        <div></div>
+        <div class="pricingPlansCard">
+          <h1 class="pricingPlansCardName">Premium</h1>
+          <p class="pricingPlansCardText">up to 200 users</p>
+          <div class="splitter"></div>
+          <h1 class="pricingPlansCardPrice">$299</h1>
+          <p class="pricingPlansCardText2">per month</p>
+          <button class="pricingPlansCardButtom">Order</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="backgroundBottom">
+      <div class="signupForm">
+        <div class="signupFormTextBlock">
+          <h1 class="signupFormText01">
+            See why the world’s best companies use Analytics
+          </h1>
+          <p class="signupFormText02">Trusted by</p>
+          <div class="logos">
+            <img
+              class="signupFormimg"
+              src="./IMG/accenture-4.svg"
+              alt="недоступно"
+            />
+            <img class="signupFormimg" src="./IMG/react.svg" alt="недоступно" />
+            <img
+              class="signupFormimg"
+              src="./IMG/airbnb.svg"
+              alt="недоступно"
+            />
+            <img class="signupFormimg" src="./IMG/sky-4.svg" alt="недоступно" />
+          </div>
+        </div>
+
+        <div class="form">
+          <form class="formInputForm">
+            <button class="formInputFormSingUp" type="submit">Sign Up</button>
+            <button class="formInputFormStart"type="submit">Start your free trial</button>
+            <input class="formInputFormInput"
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Your primary email"
+              required
+            />
+            <input class="formInputFormInput"
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Password"
+              required
+            />
+
+            <input class="formInputFormInput"
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Re-type Password"
+              required
+            />
+            <h2>Help us get better</h2>
+
+            <div class="starts"> 
+              <img src="./IMG/Star.svg" alt="none">
+              <img src="./IMG/Star.svg" alt="none">
+              <img src="./IMG/Star.svg" alt="none">
+              <img src="./IMG/Star.svg" alt="none">
+              <img src="./IMG/Star.svg" alt="none">
+            </div>
+
+            <div class="splitter2"></div>
+
+            <h3>Already have an account? Login</h3>
+          </form>
+
+        </div>
       </div>
     </section>
   </body>
