--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </header>
     <svg
-      class="huita"
+      class="hu_ta"
       width="1600"
       height="271"
       viewBox="0 0 1600 271"
@@ -136,6 +136,8 @@
       </div>
     </section>
 
+
+
     <section class="pricingPlans">
       <div class="pricingPlansName">Pricing Plans</div>
 
@@ -143,7 +145,6 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi
         aliquet volutpat pellentesque volutpat est.
       </div>
-
       <div class="pricingPlansCardAll">
         <div class="pricingPlansCard">
           <h1 class="pricingPlansCardName">Starter</h1>
@@ -174,6 +175,16 @@
       </div>
     </section>
 
+    <!-- <svg
+    class="hu_ta2"
+    width="1600"
+    height="271"
+    fill="none"
+    
+  >
+    <path d="M0 0H1600V60L0 271V0Z" fill="#EF2A82" />
+  </svg> -->
+
     <section class="backgroundBottom">
       <div class="signupForm">
         <div class="signupFormTextBlock">
@@ -181,6 +192,7 @@
             See why the world’s best companies use Analytics
           </h1>
           <p class="signupFormText02">Trusted by</p>
+
           <div class="logos">
             <img
               class="signupFormimg"
@@ -196,49 +208,75 @@
             <img class="signupFormimg" src="./IMG/sky-4.svg" alt="недоступно" />
           </div>
         </div>
-
         <div class="form">
           <form class="formInputForm">
             <button class="formInputFormSingUp" type="submit">Sign Up</button>
-            <button class="formInputFormStart"type="submit">Start your free trial</button>
-            <input class="formInputFormInput"
+            <button class="formInputFormStart" type="submit">
+              Start your free trial
+            </button>
+            <input
+              class="formInputFormInput"
               type="email"
-              id="email"
-              name="email"
               placeholder="Your primary email"
               required
             />
-            <input class="formInputFormInput"
-              type="email"
-              id="email"
-              name="email"
+            <input
+              class="formInputFormInput"
+              type="Password"
               placeholder="Password"
               required
             />
 
-            <input class="formInputFormInput"
-              type="email"
-              id="email"
-              name="email"
+            <input
+              class="formInputFormInput"
+              type="Password"
               placeholder="Re-type Password"
               required
             />
             <h2>Help us get better</h2>
 
-            <div class="starts"> 
-              <img src="./IMG/Star.svg" alt="none">
-              <img src="./IMG/Star.svg" alt="none">
-              <img src="./IMG/Star.svg" alt="none">
-              <img src="./IMG/Star.svg" alt="none">
-              <img src="./IMG/Star.svg" alt="none">
+            <div class="starts">
+              <img src="./IMG/Star.svg" alt="none" />
+              <img src="./IMG/Star.svg" alt="none" />
+              <img src="./IMG/Star.svg" alt="none" />
+              <img src="./IMG/Star.svg" alt="none" />
+              <img src="./IMG/Star.svg" alt="none" />
             </div>
 
             <div class="splitter2"></div>
 
             <h3>Already have an account? Login</h3>
           </form>
-
         </div>
+      </div>
+    </section>
+
+    <section class="Group35">
+      <div class="Group35ContainerImg">
+        <div class="image-container2">
+          <img
+            class="overlay-image"
+            src="./IMG/Subtract.png"
+            alt="NotImg"
+            width="40px"
+            height="40px"
+          />
+        </div>
+
+        <p class="main04">ANALYTICS</p>
+      </div>
+
+      <div class="main05">
+        <p>Products</p>
+        <p>Pricing</p>
+        <p>FAQ</p>
+        <p>Blog</p>
+        <p>Blog</p>
+      </div>
+      <div class="main06">
+        <img src="./IMG/Facebook.png" alt="" />
+        <img src="./IMG/Twitter.png" alt="" />
+        <img src="./IMG/Instagram.png" alt="" />
       </div>
     </section>
   </body>
