--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   </head>
 
   <body>
+
     <header class="header">
+      <img class="mainScreen1" src="./IMG/main-screen.svg" alt="">
+      <img class="mainScreen2" src="./IMG/chart-3.svg" alt="">
       <img class="leftTopCircle" src="./IMG/LeftTopCircle.svg" alt="NotImg" />
       <img class="leftTopCircle2" src="./IMG/Subtract (2).svg" alt="NotImg" />
-
       <div>
         <main class="main">
           <div class="main00">
@@ -139,6 +141,7 @@
 
 
     <section class="pricingPlans">
+      <img class="leftTopCircle3" src="./IMG/Subtract (3).svg" alt="NotImg" />
       <div class="pricingPlansName">Pricing Plans</div>
 
       <div class="pricingPlansText">
@@ -146,6 +149,7 @@
         aliquet volutpat pellentesque volutpat est.
       </div>
       <div class="pricingPlansCardAll">
+        
         <div class="pricingPlansCard">
           <h1 class="pricingPlansCardName">Starter</h1>
           <p class="pricingPlansCardText">up to 3 users</p>
